# coparser

./: README.md  pyproject.toml
src/: main.py
src/coparser/: __init__.py  models.py  parser.py
tests/coparser/: conftest.py  test_coparser.py
