[project]
name = "coparser"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kota Miyazaki", email = "kota_miyazaki@adforce.co.jp" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
