[project]
name = "coparser"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kota Miyazaki", email = "kota_miyazaki@adforce.co.jp" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "flake8>=6.1.0",
    "black>=23.9.1",
    "isort>=5.12.0",
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "pytest-randomly>=3.15.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
markers = [
    "case_normal: 正常",
    "case_abnormal: 異常",
    "case_limit: 境界"
]